# embedded-hub

./: .gitignore  CMakeLists.txt  README.md
docs/: roadmap.md
tutorials/: CMakeLists.txt
tutorials/01_c_fundamentals/: bit_ops.h  main.c  ring_buffer.c  ring_buffer.h
tutorials/c_fundamentals/: CMakeLists.txt  main.c
tutorials/c_fundamentals/include/: big_o.h  bitwise_utils.h  math_utils.h
tutorials/c_fundamentals/src/: big_o.c  bitwise_utils.c  math_utils.c
